  - Added -silent command-line option to run DOSBox-X
    silently (without showing the DOSBox-X window) and
    then exit after executing AUTOEXEC.BAT. (Wengier)
  - Fixed command-line option -socket not working for
    the null-modem feature. (Wengier)
  - Fixed issue that aspect ratio not being respected
    in full-screen mode when a GLSL shader is enabled
    with an OpenGL output. (Wengier)
  - Fixed shelling from programs may not work when the
    shell config option is set. (Wengier)
  - The default country setting ("country" option in
    [config] section]) now defaults to auto-detection
    if possible, or 81 (Japan) in PC-98 mode. (Wengier)
  - Increased the default maximum DOS files (adjustable
    from [config] section) from 127 to 200. (Wengier)
  - Improved resetting with LOADLIN program. (Wengier)
  - Improved Gravis Ultrasound (GUS) implementation to
    make it more accurately represent the GUS DMA state
    as expected by the running DOS software.
  - The archive attribute will no longer automatically
    be applied to directories on non-Windows systems.
    This fixed issue with PLAYMIDI.EXE from Gravis
    Ultrasound when listing directories. (Wengier)
  - Applied hack to allow the low DMA channel detection
    in the SB16 DIAGNOSE program to work. (Wengier)
  - The default setting of the clip_paste_speed option
    has been changed from 20 to 30, which will help
    prevent lost keystrokes when pasting from the host
    clipboard for some programs. (Wengier)
  - With Pentium CPU setting (cputype=pentium) DOSBox-X
    no longer reports FDIV bug by default. An advanced
    config option "report fdiv bug" is added to report
    such CPU bug when set to true. (rderooy & Wengier)
  - Added support for the XDG_DATA_HOME environment
    variable for config directory in Linux. (rderooy)
  - Added support for compiling with pcap for Windows
    MinGW builds. (Jookia)
  - Added config option "windowposition" (in [sdl]